@@ -4,6 +4,8 @@ conda { cacheDir = "${params.condaCacheDir}" }
 
 process {
     withLabel:qualimap { conda = "${params.geniac.tools.qualimap}" }
+    withLabel:picard { conda = "${params.geniac.tools.picard}" }
+    withLabel:mosdepth { conda = "${params.geniac.tools.mosdepth}" } 
     withLabel:tabix { conda = "${params.geniac.tools.tabix}" }
     withLabel:bcftools { conda = "${params.geniac.tools.bcftools}" }
     withLabel:manta { conda = "${params.geniac.tools.manta}" }
